--- a/css/pureb2b.css
+++ b/css/pureb2b.css
@@ -4156,6 +4156,91 @@ main {
   }
 }
 
+
+/* smartleads hero text and info box media queries */
+@media (max-width: 992px) {
+  .smartleads-hero {
+    padding-top: 100px;
+  }
+  .smartleads-hero h1 {
+    font-size: 70px;
+  }
+  .smartleads-hero h2 {
+    font-size: 40px;
+  }
+  .smartleads-hero h3 {
+    font-size: 30px;
+  }
+  .page-id-124 .desktop-info-box h2 {
+    font-size: 25px;
+  }
+  .page-id-124 .desktop-info-box p {
+    font-size: 18px;
+  }
+}
+
+
+@media (max-width: 767px) {
+  .smartleads-hero {
+    height: 120vh;
+  }
+  .smartleads-hero h1 {
+    font-size: 60px;
+  }
+  .smartleads-hero h2 {
+    font-size: 30px;
+  }
+  .smartleads-hero h3 {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 550px) {
+  .smartleads-hero {
+    height: 120vh;
+  }
+  .smartleads-hero h1 {
+    font-size: 50px;
+  }
+  .smartleads-hero h2 {
+    font-size: 25px;
+  }
+  .smartleads-hero h3 {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 460px) {
+  .smartleads-hero {
+    height: 110vh;
+  }
+  .smartleads-hero h1 {
+    font-size: 40px;
+  }
+  .smartleads-hero h2 {
+    font-size: 22px;
+  }
+  .smartleads-hero h3 {
+    font-size: 18px;
+  }
+  .page-id-124 .desktop-info-box h2 {
+    font-size: 22px;
+  }
+  .page-id-124 .desktop-info-box p {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 360px) {
+  .page-id-124 .desktop-info-box {
+    padding: 40px 05px !important;
+  }
+}
+
+
+
+
+
 /* image section */
 .image-section {
   text-align: center;
@@ -4239,6 +4324,7 @@ main {
 }
 
 
+
 /* data section */
 .data-section {
   padding: 0 10vw;
@@ -4274,4 +4360,533 @@ p.border {
   margin: 0 auto;
   min-width: 290px;
   margin-top: 60px;
+}
+
+
+
+/* accelerate and data section media queries for smaller screens*/
+@media (max-width: 1350px) {
+  .accelerate-section {
+    padding-top: 325px;
+    margin-top: -300px;
+  }
+}
+
+@media (max-width: 1300px) and (min-width: 993px) {
+  .accelerate-text-container {
+    width: 90%;
+  }
+  .three-boxes-row {
+    padding: 0 5vw;
+  }
+  .three-boxes-row .white-box {
+    padding: 20px;
+    min-height: 340px;
+  }
+  .three-boxes-row .white-box h2 {
+    font-size: 25px;
+
+  }
+}
+
+@media (max-width: 1010px) {
+  .accelerate-section {
+    padding-top: 275px;
+    margin-top: -250px;
+  }
+}
+
+@media (min-width: 993px) {
+  .accelerate-section-mobile {
+    display: none;
+  }
+}
+
+@media (max-width: 992px) {
+  .page-id-124 h1.blue {
+    font-size: 25px;
+  }
+  .accelerate-section-desktop {
+    display: none;
+  }
+  .accelerate-text-container {
+    text-align: center;
+  }
+  .accelerate-text-container h2 {
+    font-size: 25px;
+  }
+  .accelerate-text-container p {
+    font-size: 18px;
+  }
+  .page-id-124 .white-box {
+    margin-top: 40px;
+  }
+  .accelerate-section-mobile .accelerate-text-container-2 {
+    margin-top: -250px;
+  }
+  .three-boxes-row .white-box h2 {
+    font-size: 25px;
+  }
+  .three-boxes-row .white-box p {
+    font-size: 18px;
+  }
+  .data-section {
+    text-align: center;
+  }
+  .data-section h1 {
+    font-size: 25px;
+    margin-top: 80px;
+  }
+  .data-section p {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 767px) {
+  .accelerate-section {
+    padding-top: 225px;
+    margin-top: -200px;
+  }
+  .accelerate-section-mobile .accelerate-text-container-2 {
+    margin-top: -300px;
+  }
+  .three-boxes-row .white-box {
+    min-height: 200px;
+    padding: 20px;
+  }
+}
+
+@media (max-width: 600px) {
+  .page-id-124 .person-white-box {
+    padding: 0;
+  }
+  .three-boxes-row {
+    padding: 0 5vw;
+  }
+  .data-section {
+    padding: 0 5vw;
+  }
+}
+
+@media (max-width: 550px) {
+  .accelerate-section {
+    padding-top: 200px;
+    margin-top: -175px;
+  }
+  .accelerate-text-container {
+    width: 85%;
+  }
+}
+
+@media (max-width: 460px) {
+  .page-id-124 h1.blue {
+    font-size: 22px;
+  }
+  .accelerate-section {
+    padding-top: 175px;
+    margin-top: -150px;
+  }
+  .accelerate-text-container h2 {
+    font-size: 22px;
+  }
+  .accelerate-text-container p {
+    font-size: 16px;
+  }
+  .three-boxes-row .white-box h2 {
+    font-size: 22px;
+  }
+  .three-boxes-row .white-box p {
+    font-size: 16px;
+  }
+  .three-boxes-row {
+    padding: 0 2vw;
+  }
+  .data-section {
+    padding: 0 2vw;
+  }
+  .data-section h1 {
+    font-size: 22px;
+  }
+  .data-section p {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 410px) {
+  .page-id-124 h1.blue {
+    font-size: 20px;
+  }
+  .accelerate-section {
+    padding-top: 175px;
+    margin-top: -150px;
+  }
+  .accelerate-text-container h2 {
+    font-size: 20px;
+  }
+  .accelerate-text-container p {
+    font-size: 16px;
+  }
+  .three-boxes-row .white-box h2 {
+    font-size: 20px;
+  }
+  .three-boxes-row .white-box p {
+    font-size: 16px;
+  }
+  .data-section h1 {
+    font-size: 20px;
+  }
+  .data-section p {
+    font-size: 16px;
+  }
+}
+
+
+/* Smartleads device-specific media queries */
+
+/* iphone 5/SE */
+@media (max-width: 325px) and (max-height: 570px) {
+  .page-id-124 .desktop-info-box {
+    margin-top: -370px;
+  }
+  .accelerate-section-mobile .accelerate-text-container-2 {
+    margin-top: -200px;
+    /* margin-bottom: 200px; */
+  }
+  .three-boxes-row {
+    margin-top: -200px;
+  }
+}
+
+/* ipad */
+@media (max-width: 768px) and (min-height: 990px) {
+  .smartleads-hero {
+    height: 100vh;
+  }
+  .accelerate-section {
+    min-height: 150vh;
+  }
+}
+
+/* ipad pro */
+@media (max-width: 1050px) and (min-height: 1300px) {
+  .smartleads-hero {
+    height: 70vh;
+  }
+  .accelerate-section {
+    min-height: 80vh;
+  }
+}
+
+
+
+/* Smartleads page media queries for larger screens */
+@media (min-width: 1561px) and (min-height: 900px) {
+  .smartleads-hero {
+    height: 120vh;
+  }
+  .accelerate-section {
+    min-height: 150vh;
+  }
+  .smartleads-hero h1 {
+    font-size: 80px;
+  }
+  .smartleads-hero h2 {
+    font-size: 50px;
+  }
+  .smartleads-hero h3 {
+    font-size: 40px;
+  }
+  .page-id-124 .desktop-info-box {
+    margin-top: -550px;
+  }
+  .page-id-124 h1.blue {
+    font-size: 40px;
+  }
+  .page-id-124 .desktop-info-box h2 {
+    font-size: 40px;
+  }
+  .page-id-124 .desktop-info-box p {
+    font-size: 22px;
+  }
+  .page-id-124 .orange-button {
+    font-size: 16px;
+  }
+  .data-text-container h2 {
+    font-size: 30px;
+  }
+  .accelerate-text-container h2 {
+    font-size: 40px;
+  }
+  .accelerate-text-container p {
+    font-size: 22px;
+  }
+  .three-boxes-row .white-box {
+    padding: 20px 20px 40px 20px;
+    min-height: 450px;
+  }
+  .three-boxes-row .white-box h2 {
+    font-size: 35px;
+  }
+  .three-boxes-row .white-box p {
+    font-size: 22px;
+  }
+  .data-section h1 {
+    font-size: 40px;
+  }
+  .data-section p {
+    font-size: 22px;
+  }
+}
+
+@media (min-width: 1761px) and (min-height: 1000px) {
+  .smartleads-hero {
+    height: 130vh;
+  }
+  .accelerate-section {
+    min-height: 150vh;
+  }
+  .smartleads-hero h1 {
+    font-size: 85px;
+    margin-top: 100px;
+  }
+  .smartleads-hero h2 {
+    font-size: 55px;
+  }
+  .smartleads-hero h3 {
+    font-size: 45px;
+  }
+  .page-id-124 .desktop-info-box {
+    margin-top: -650px;
+  }
+  .page-id-124 h1.blue {
+    font-size: 45px;
+  }
+  .page-id-124 .desktop-info-box h2 {
+    font-size: 45px;
+  }
+  .page-id-124 .desktop-info-box p {
+    font-size: 25px;
+  }
+  .page-id-124 .orange-button {
+    font-size: 22px;
+  }
+  .data-text-container h2 {
+    font-size: 35px;
+  }
+  .accelerate-text-container h2 {
+    font-size: 45px;
+  }
+  .accelerate-text-container p {
+    font-size: 25px;
+  }
+  .three-boxes-row .white-box {
+    padding: 20px 20px 40px 20px;
+    min-height: 450px;
+  }
+  .three-boxes-row .white-box h2 {
+    font-size: 35px;
+  }
+  .three-boxes-row .white-box p {
+    font-size: 25px;
+  }
+  .data-section h1 {
+    font-size: 45px;
+  }
+  .data-section p {
+    font-size: 25px;
+  }
+}
+
+
+@media (min-width: 1920px) and (min-height: 1080px) {
+  .smartleads-hero {
+    height: 130vh;
+  }
+  .accelerate-section {
+    min-height: 160vh;
+  }
+  .smartleads-hero h1 {
+    font-size: 85px;
+    margin-top: 200px;
+  }
+  .smartleads-hero h2 {
+    font-size: 60px;
+  }
+  .smartleads-hero h3 {
+    font-size: 50px;
+  }
+  .page-id-124 .desktop-info-box {
+    margin-top: -650px;
+  }
+  .page-id-124 h1.blue {
+    font-size: 50px;
+  }
+  .page-id-124 .desktop-info-box h2 {
+    font-size: 50px;
+  }
+  .page-id-124 .desktop-info-box p {
+    font-size: 30px;
+  }
+  .page-id-124 .orange-button {
+    font-size: 25px;
+    padding: 20px 50px;
+  }
+  .accelerate-text-container h2 {
+    font-size: 50px;
+  }
+  .data-text-container h2 {
+    font-size: 40px;
+  }
+  .accelerate-text-container p {
+    font-size: 30px;
+  }
+  .three-boxes-row {
+    margin-top: -400px;
+  }
+  .three-boxes-row .white-box {
+    padding: 20px 20px 40px 20px;
+    min-height: 500px;
+  }
+  .three-boxes-row .white-box h2 {
+    font-size: 40px;
+  }
+  .three-boxes-row .white-box p {
+    font-size: 30px;
+  }
+  .data-section h1 {
+    font-size: 50px;
+  }
+  .data-section p {
+    font-size: 30px;
+  }
+}
+
+
+@media (min-width: 2300px) and (min-height: 1200px) {
+  .smartleads-hero {
+    height: 130vh;
+  }
+  .accelerate-section {
+    min-height: 160vh;
+  }
+  .smartleads-hero h1 {
+    font-size: 95px;
+    margin-top: 200px;
+  }
+  .smartleads-hero h2 {
+    font-size: 70px;
+  }
+  .smartleads-hero h3 {
+    font-size: 60px;
+  }
+  .page-id-124 .desktop-info-box {
+    margin-top: -750px;
+  }
+  .page-id-124 h1.blue {
+    font-size: 55px;
+  }
+  .page-id-124 .desktop-info-box h2 {
+    font-size: 55px;
+  }
+  .page-id-124 .desktop-info-box p {
+    font-size: 35px;
+  }
+  .page-id-124 .orange-button {
+    font-size: 30px;
+    padding: 20px 50px;
+  }
+  .accelerate-text-container h2 {
+    font-size: 55px;
+  }
+  .data-text-container h2 {
+    font-size: 45px;
+  }
+  .accelerate-text-container p {
+    font-size: 35px;
+  }
+  .three-boxes-row {
+    margin-top: -400px;
+  }
+  .three-boxes-row .white-box {
+    padding: 20px 20px 40px 20px;
+    min-height: 570px;
+  }
+  .three-boxes-row .white-box h2 {
+    font-size: 45px;
+  }
+  .three-boxes-row .white-box p {
+    font-size: 35px;
+  }
+  .data-section h1 {
+    font-size: 55px;
+  }
+  .data-section p {
+    font-size: 35px;
+  }
+}
+
+@media (min-width: 2500px) and (min-height: 1300px) {
+  .smartleads-hero {
+    height: 130vh;
+  }
+  .accelerate-section {
+    min-height: 160vh;
+  }
+  .smartleads-hero h1 {
+    font-size: 100px;
+    margin-top: 200px;
+  }
+  .smartleads-hero h2 {
+    font-size: 75px;
+  }
+  .smartleads-hero h3 {
+    font-size: 65px;
+  }
+  .page-id-124 .desktop-info-box {
+    margin-top: -850px;
+  }
+  .page-id-124 h1.blue {
+    font-size: 60px;
+  }
+  .page-id-124 .desktop-info-box h2 {
+    font-size: 60px;
+  }
+  .page-id-124 .desktop-info-box p {
+    font-size: 40px;
+  }
+  .page-id-124 .orange-button {
+    font-size: 35px;
+    padding: 20px 50px;
+  }
+  .accelerate-text-container h2 {
+    font-size: 60px;
+  }
+  .data-text-container h2 {
+    font-size: 50px;
+  }
+  .accelerate-text-container p {
+    font-size: 40px;
+  }
+  .three-boxes-row {
+    margin-top: -400px;
+  }
+  .three-boxes-row .white-box {
+    padding: 20px 20px 40px 20px;
+    min-height: 620px;
+  }
+  .three-boxes-row .white-box h2 {
+    font-size: 50px;
+  }
+  .three-boxes-row .white-box p {
+    font-size: 40px;
+  }
+  .data-section h1 {
+    font-size: 60px;
+  }
+  .data-section p {
+    font-size: 40px;
+  }
+  .accelerate-section-desktop .white-box {
+    margin-top: 150px;
+  }
 }
