--- a/css/pureb2b.css
+++ b/css/pureb2b.css
@@ -59,6 +59,28 @@ p {
   font-family: 'Open Sans Light';
 }
 
+.page-template-default .content-container {
+  padding: 60px 10vw;
+}
+
+.page-template-default .page-header,
+.error-header {
+  background-image: url('../images/homepage/hero-bg-copy.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  min-height: 100vh;
+  margin-top: -100px;
+  color: #fff;
+  text-align: center;
+}
+
+
+.page-template-default .page-header h1,
+.error-header h1 {
+  font-family: 'Gotham Light';
+  padding-top: 250px;
+}
 
 .center {
   text-align: center;
@@ -290,7 +312,8 @@ p {
 }
 
 #menu-item-202 a,
-#menu-item-212 a {
+#menu-item-212 a ,
+#menu-item-373 a {
   color: #fff;
   text-transform: uppercase;
   background-color: #ffa800;
@@ -428,7 +451,7 @@ p {
   border-right: 1px solid rgba(0, 0, 0, 0.3);
 }
 
-#menu-item-181 a {
+#menu-item-377 a {
   color: #fff;
   text-transform: uppercase;
   background-color: #ffa800;
@@ -455,7 +478,7 @@ p {
   font-size: 20px !important;
 }
 
-#menu-item-190 a {
+#menu-item-375 a {
   color: #fff !important;
   text-transform: uppercase;
   background-color: #008fff;
@@ -486,7 +509,7 @@ p {
   font-size: 20px !important;
 }
 
-#menu-item-195 a {
+#menu-item-379 a {
   color: #fff !important;
   text-transform: uppercase;
   background-color: #ffa800;
@@ -517,7 +540,7 @@ p {
   font-size: 20px !important;
 }
 
-#menu-item-201 a {
+#menu-item-381 a {
   color: #fff !important;
   text-transform: uppercase;
   background-color: #7e1fff;
@@ -532,9 +555,9 @@ p {
   margin-top: 20px;
 }
 
-#menu-item-190,
-#menu-item-195,
-#menu-item-201 {
+#menu-item-375,
+#menu-item-379,
+#menu-item-381 {
   position: absolute !important;
   bottom: 60px !important;
 }
@@ -543,11 +566,12 @@ p {
 /* main navigation styles */
 
 .main-navbar-menus {
-  position: fixed;
+  /* position: fixed; */
+  position: absolute;
   left: 0;
   top: 0;
   width: 100%;
-  background: #008fff;
+  /* background: #008fff; */
   height: 70px;
   line-height: 40px;
   z-index: 100;
@@ -630,6 +654,47 @@ p {
     font-size: 12px;
   }
 }
+
+
+/* main navigation media queries for larger screens */
+@media (min-width: 1761px) {
+  #menu-navbar li a, #menu-navbar li a:visited {
+    font-size: 18px;
+  }
+  .menu-home-logo-menu-container img {
+    height: 60px;
+  }
+  .main-navbar-menus {
+    line-height: 60px;
+  }
+}
+
+@media (min-width: 1920px) {
+  #menu-navbar li a, #menu-navbar li a:visited {
+    font-size: 20px;
+  }
+  .menu-home-logo-menu-container img {
+    height: 70px;
+  }
+  .main-navbar-menus {
+    line-height: 70px;
+  }
+}
+
+@media (min-width: 2300px) {
+  #menu-navbar li a, #menu-navbar li a:visited {
+    font-size: 24px;
+  }
+  .menu-home-logo-menu-container img {
+    height: 80px;
+  }
+  .main-navbar-menus {
+    line-height: 80px;
+  }
+}
+
+
+
 
 
 
@@ -783,9 +848,24 @@ h1.quotes {
   }
 }
 
+@media (max-width: 1200px) {
+  .hero h2,
+  .hero p {
+    width: 85%;
+    min-width: 290px;
+  }
+}
+
 @media (max-width: 1005px) {
   h1.quotes {
-    font-size: 40px !important;
+    font-size: 38px !important;
+  }
+}
+
+@media (max-width: 780px) {
+  .hero h1.light {
+    font-size: 45px;
+    margin-top: 40px;
   }
 }
 
@@ -841,6 +921,40 @@ h1.quotes {
   }
 }
 
+
+/* home hero media queries for specific devices */
+/* ipad/long tablet */
+@media (max-width: 768px) and (min-height: 990px) {
+  /* .hero {
+    padding-top: 200px;
+  } */
+  .hero h1.light {
+
+  }
+  .home .info-row-mobile {
+    margin-top: -400px !important;
+  }
+}
+
+/* ipad pro */
+@media (max-width: 1050px) and (min-height: 1200px) {
+  .home .hero {
+    min-height: 0 !important;
+    height: 80vh !important;
+  }
+  .hero h1.light {
+    margin-top: 100px;
+  }
+  .home .info-row-1 {
+    margin-top: -400px !important;
+  }
+  .home .funnel-section {
+    min-height: 0;
+    height: 60vh;
+    margin-top: -500px;
+    padding-top: 700px;
+  }
+}
 
 
 
@@ -960,7 +1074,9 @@ h1.quotes {
 }
 
 .home .info-row-mobile img {
-  width: 100%;
+  display: block;
+  width: 80%;
+  margin: 0 auto;
   margin-top: 60px;
 }
 
@@ -971,6 +1087,9 @@ h1.quotes {
 @media (max-width: 767px) {
   .info-row-mobile .white-box.white-box-no-margins{
     margin-top: 300px;
+  }
+  .home .info-row-mobile img {
+    width: 100%;
   }
 }
 
@@ -995,6 +1114,12 @@ h1.quotes {
     margin-top: -350px;
   }
 }
+
+
+
+
+
+
 
 
 
@@ -1079,6 +1204,7 @@ h1.quotes {
 @media (max-width: 992px) {
   .funnel-section {
     padding-bottom: 200px;
+    margin-top: -500px;
   }
   .funnel-section .white-box-no-shadow {
     min-height: 290px;
@@ -1232,21 +1358,33 @@ h1.quotes {
   }
 }
 
-@media (min-width: 1750px) {
+@media (min-width: 1761px) {
   .team-card-row {
-    padding: 0 370px;
+    padding: 0 300px;
+  }
+  .team-card {
+    height: 380px !important;
+    max-width: none !important;
+    width: 100% !important;
+  }
+  .team-card-text {
+    padding-top: 210px !important;
+  }
+  .team-card-text p {
+    font-size: 24px;
+    line-height: 1;
   }
 }
 
 @media (min-width: 1950px) {
   .team-card-row {
-    padding: 0 470px;
+    padding: 0 400px;
   }
 }
 
 @media (min-width: 2250px) {
   .team-card-row {
-    padding: 0 570px;
+    padding: 0 450px;
   }
 }
 
@@ -1264,6 +1402,10 @@ h1.quotes {
 
 .team-card-text {
   padding-top: 175px;
+}
+
+.team-card-text p {
+  font-family: 'Gotham Book';
 }
 
 .team-card-1 {
@@ -1345,6 +1487,10 @@ footer p.address {
   font-size: 12px;
 }
 
+footer a:hover {
+  text-decoration: underline;
+}
+
 .footer-bottom-row {
   background: #464646;
 }
@@ -1355,12 +1501,26 @@ footer p.address {
   margin: 10px auto;
 }
 
+.menu-item-365 a,
+.menu-item-367 a,
+.menu-item-369 a,
+.menu-item-371 a,
 .menu-item-144 a,
 .menu-item-145 a,
 .menu-item-146 a {
   font-family: 'Gotham Book';
   font-size: 14px;
 }
+
+.menu-item-169 a {
+  pointer-events: none;
+}
+
+.menu-item-169 a:hover {
+  text-decoration: none;
+}
+
+
 
 #menu-social-menu li {
   display: inline-flex;
@@ -1443,13 +1603,39 @@ footer p.address {
   }
 }
 
+@media (min-width: 1761px) {
+  footer p {
+    font-size: 16px;
+  }
+  .menu-item-144 a,
+  .menu-item-145 a,
+  .menu-item-146 a {
+    font-size: 16px;
+  }
+  footer a,
+  footer a:visited,
+  footer p.address {
+    font-size: 14px;
+  }
+  .menu-item-365 a,
+  .menu-item-367 a,
+  .menu-item-369 a,
+  .menu-item-371 a,
+  .menu-item-144 a,
+  .menu-item-145 a,
+  .menu-item-146 a {
+    font-size: 16px;
+  }
+}
+
+
 @media (min-width: 1800px) {
   .footer-row {
     padding: 0 240px;
   }
 }
 
-@media (min-width: 2050px) {
+/* @media (min-width: 2050px) {
   .footer-row {
     padding: 0 340px;
   }
@@ -1466,12 +1652,9 @@ footer p.address {
   footer p.address {
     font-size: 14px;
   }
-}
+} */
 
-@media (min-width: 2350px) {
-  .footer-row {
-    padding: 0 440px;
-  }
+@media (min-width: 2100px) {
   footer p {
     font-size: 18px;
   }
@@ -1484,6 +1667,24 @@ footer p.address {
   footer a:visited,
   footer p.address {
     font-size: 16px;
+  }
+  .menu-item-365 a,
+  .menu-item-367 a,
+  .menu-item-369 a,
+  .menu-item-371 a,
+  .menu-item-144 a,
+  .menu-item-145 a,
+  .menu-item-146 a {
+    font-size: 18px;
+  }
+  .footer-row {
+    padding: 0 340px;
+  }
+}
+
+@media (min-width: 2350px) {
+  .footer-row {
+    padding: 0 440px;
   }
 }
 
@@ -1524,7 +1725,7 @@ footer p.address {
   display: none;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 992px) {
   .icons-carousel {
     display: block;
   }
@@ -1667,7 +1868,7 @@ main {
   display: none;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 992px) {
   .team-carousel {
     display: block;
   }
@@ -1819,7 +2020,7 @@ main {
   display: none;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 992px) {
   .client-carousel {
     display: block;
   }
@@ -1953,20 +2154,23 @@ main {
 
 /* homepage media queries for larger screens */
 @media (min-width: 1561px) and (min-height: 900px) {
+  .hero {
+    height: 125vh;
+  }
   .hero h2 {
     font-size: 40px;
     max-width: 1200px;
   }
   .hero p {
     font-size: 25px;
-    margin-top: 70px;
+    margin-top: 60px;
     max-width: 1200px;
   }
   .home .info-row {
     padding: 0 150px;
   }
   .home .info-row-1 {
-    margin-top: -150px !important;
+    margin-top: 0px !important;
   }
   /* .home .info-row img {
     margin-top: 100px !important;
@@ -2979,7 +3183,8 @@ main {
 
 
 /* lead gen page info row */
-
+.page-id-307 .info-row img,
+.page-id-304 .info-row img,
 .page-id-279 .info-row img,
 .page-id-10 .info-row img {
   width: 90%;
@@ -2990,12 +3195,16 @@ main {
   transform: translateY(-50%);
 }
 
+.page-id-307 .info-row,
+.page-id-304 .info-row,
 .page-id-279 .info-row,
 .page-id-10 .info-row {
   padding: 40px 150px;
 }
 
 @media (max-width: 840px) {
+  .page-id-307 .info-row,
+  .page-id-304 .info-row,
   .page-id-279 .info-row,
   .page-id-10 .info-row {
     padding: 40px 50px;
@@ -3003,29 +3212,39 @@ main {
 }
 
 @media (max-width: 550px) {
+  .page-id-307 .info-row,
+  .page-id-304 .info-row,
   .page-id-279 .info-row,
   .page-id-10 .info-row {
     padding: 40px 20px;
   }
 }
 
+.page-id-307 .info-row h2,
+.page-id-304 .info-row h2,
 .page-id-279 .info-row h2,
 .page-id-10 .info-row h2 {
     font-size: 35px;
     font-family: 'Gotham Light';
 }
 
+.page-id-307 .info-row h3,
+.page-id-304 .info-row h3,
 .page-id-279 .info-row h3,
 .page-id-10 .info-row h3 {
   font-family: 'Gotham Medium';
 }
 
+.page-id-307 .info-row p,
+.page-id-304 .info-row p,
 .page-id-279 .info-row p,
 .page-id-10 .info-row p {
   font-family: 'Open Sans Light';
   margin-top: 20px;
 }
 
+.page-id-307 .info-row p:nth-of-type(2),
+.page-id-304 .info-row p:nth-of-type(2),
 .page-id-279 .info-row p:nth-of-type(2),
 .page-id-10 .info-row p:nth-of-type(2) {
   margin-bottom: 40px;
@@ -3307,6 +3526,106 @@ main {
 
 
 
+/* lead generation page media queries for specific devices */
+/* ipad/long tablet */
+@media (max-width: 768px) and (min-height: 990px) {
+  .lead-hero {
+    min-height: 0;
+    height: 90vh;
+  }
+  .lead-hero h1.light {
+    margin-top: 40px;
+  }
+  .column-5 {
+    padding-top: 300px;
+  }
+  .column-6 {
+    padding-top: 350px;
+  }
+  .research-lead-gen-row .column-3 {
+    padding-top: 175px;
+  }
+  .research-lead-gen-row .column-4 {
+    padding-top: 225px;
+  }
+  .funnel-row .funnel-text-container img {
+    margin-top: 40px;
+  }
+  .funnel-row .funnel-text-container h4 {
+    margin-top: -10px;
+  }
+  .bottom-of-funnel-row .orange-mobile-background {
+    margin-top: -400px;
+  }
+  .research-lead-gen-row .purple-mobile-background {
+    margin-top: -500px;
+  }
+  .bottom-of-funnel-row-mobile .funnel-text-container {
+    margin-top: -340px;
+  }
+  .research-lead-gen-row .funnel-text-container {
+    margin-top: -250px;
+  }
+}
+
+/* ipad pro */
+@media (max-width: 1050px) and (min-height: 1200px) {
+  .lead-hero {
+    min-height: 0;
+    height: 70vh;
+  }
+  .lead-hero h1.light {
+    margin-top: 40px;
+  }
+  .column-5 {
+    padding-top: 300px;
+  }
+  .column-6 {
+    padding-top: 350px;
+  }
+  .bottom-of-funnel-row {
+    margin-top: -45vh;
+  }
+  .research-lead-gen-row {
+    min-height: 100vh;
+    margin-top: -70vh;
+  }
+  .page-id-10 .info-row {
+    margin-top: -25vh;
+  }
+  .research-lead-gen-row .funnel-text-container {
+    margin-top: -525px !important;
+  }
+  .bottom-of-funnel-text-container {
+    margin-top: 250px !important;
+  }
+  .research-lead-gen-row .column-3 {
+    padding-top: 175px;
+  }
+  .research-lead-gen-row .column-4 {
+    padding-top: 225px;
+  }
+  .funnel-row .funnel-text-container img {
+    margin-top: 40px;
+  }
+  .funnel-row .funnel-text-container h4 {
+    margin-top: -10px;
+  }
+  .bottom-of-funnel-row .orange-mobile-background {
+    margin-top: -400px;
+  }
+  .research-lead-gen-row .purple-mobile-background {
+    margin-top: -500px;
+  }
+  .bottom-of-funnel-row-mobile .funnel-text-container {
+    margin-top: -340px;
+  }
+  .research-lead-gen-row .funnel-text-container {
+    margin-top: -250px;
+  }
+}
+
+
 
 
 /* Lead Solutions page media queries for larger screens */
@@ -3351,18 +3670,26 @@ main {
   .column-6 {
     margin-top: 250px;
   }
+  .page-id-304 .text-container h2,
+  .page-id-307 .text-container h2,
   .page-id-279 .text-container h2,
   .page-id-10 .text-container h2 {
     font-size: 40px;
   }
+  .page-id-304 .text-container h3,
+  .page-id-307 .text-container h3,
   .page-id-279 .text-container h3,
   .page-id-10 .text-container h3 {
     font-size: 25px;
   }
+  .page-id-304 .text-container p,
+  .page-id-307 .text-container p,
   .page-id-279 .text-container p,
   .page-id-10 .text-container p {
     font-size: 20px;
   }
+  .page-id-307 .info-row img,
+  .page-id-304 .info-row img,
   .page-id-279 .info-row img,
   .page-id-10 .info-row img {
     width: 100%;
@@ -3420,14 +3747,20 @@ main {
   .column-6 {
     margin-top: 0px;
   }
+  .page-id-304 .text-container h2,
+  .page-id-307 .text-container h2,
   .page-id-279 .text-container h2,
   .page-id-10 .text-container h2 {
     font-size: 42px;
   }
+  .page-id-304 .text-container h3,
+  .page-id-307 .text-container h3,
   .page-id-279 .text-container h3,
   .page-id-10 .text-container h3 {
     font-size: 28px;
   }
+  .page-id-304 .text-container p,
+  .page-id-307 .text-container p,
   .page-id-279 .text-container p,
   .page-id-10 .text-container p {
     font-size: 22px;
@@ -3491,14 +3824,19 @@ main {
   .column-6 {
     margin-top: 50px;
   }
+  .page-id-304 .text-container h2,
+  .page-id-307 .text-container h2,
   .page-id-279 .text-container h2,
   .page-id-10 .text-container h2 {
     font-size: 45px;
   }
-  .page-id-279 .text-container h3,
+  .page-id-304 .text-container h2,
+  .page-id-307 .text-container h3,
   .page-id-10 .text-container h3 {
     font-size: 32px;
   }
+  .page-id-304 .text-container p,
+  .page-id-307 .text-container p,
   .page-id-279 .text-container p,
   .page-id-10 .text-container p {
     font-size: 25px;
@@ -3566,14 +3904,20 @@ main {
   .column-6 {
     margin-top: 50px;
   }
+  .page-id-304 .text-container h2,
+  .page-id-307 .text-container h2,
   .page-id-279 .text-container h2,
   .page-id-10 .text-container h2 {
     font-size: 50px;
   }
+  .page-id-304 .text-container h3,
+  .page-id-307 .text-container h3,
   .page-id-279 .text-container h3,
   .page-id-10 .text-container h3 {
     font-size: 35px;
   }
+  .page-id-304 .text-container p,
+  .page-id-307 .text-container p,
   .page-id-279 .text-container p,
   .page-id-10 .text-container p {
     font-size: 30px;
@@ -3581,6 +3925,8 @@ main {
   .page-id-10 .row.info-row.info-row-2 {
     margin-top: -150px;
   }
+  .page-id-304 .orange-button,
+  .page-id-307 .orange-button,
   .page-id-279 .orange-button,
   .page-id-10 .orange-button {
     font-size: 25px;
@@ -3644,14 +3990,20 @@ main {
   .column-6 {
     margin-top: 50px;
   }
+  .page-id-304 .text-container h2,
+  .page-id-307 .text-container h2,
   .page-id-279 .text-container h2,
   .page-id-10 .text-container h2 {
     font-size: 55px;
   }
+  .page-id-304 .text-container h3,
+  .page-id-307 .text-container h3,
   .page-id-279 .text-container h3,
   .page-id-10 .text-container h3 {
     font-size: 40px;
   }
+  .page-id-304 .text-container p,
+  .page-id-307 .text-container p,
   .page-id-279 .text-container p,
   .page-id-10 .text-container p {
     font-size: 35px;
@@ -3659,6 +4011,8 @@ main {
   .page-id-10 .row.info-row.info-row-2 {
     margin-top: -150px;
   }
+  .page-id-304 .orange-button,
+  .page-id-307 .orange-button,
   .page-id-279 .orange-button,
   .page-id-10 .orange-button {
     font-size: 28px;
@@ -3709,14 +4063,20 @@ main {
   .column-6 {
     margin-top: 50px;
   }
+  .page-id-304 .text-container h2,
+  .page-id-307 .text-container h2,
   .page-id-279 .text-container h2,
   .page-id-10 .text-container h2 {
     font-size: 60px;
   }
+  .page-id-304 .text-container h3,
+  .page-id-307 .text-container h3,
   .page-id-279 .text-container h3,
   .page-id-10 .text-container h3 {
     font-size: 45px;
   }
+  .page-id-304 .text-container p,
+  .page-id-307 .text-container p,
   .page-id-279 .text-container p,
   .page-id-10 .text-container p {
     font-size: 40px;
@@ -3724,11 +4084,15 @@ main {
   .page-id-10 .row.info-row.info-row-2 {
     margin-top: -150px;
   }
+  .page-id-304 .orange-button,
+  .page-id-307 .orange-button,
   .page-id-279 .orange-button,
   .page-id-10 .orange-button {
     font-size: 32px;
     padding: 20px 50px;
   }
+  .page-id-304 h1.blue,
+  .page-id-307 h1.blue,
   .page-id-279 h1.blue,
   .page-id-10 h1.blue {
     font-size: 60px;
@@ -3957,6 +4321,34 @@ main {
   }
   .box-row .box p {
     font-size: 16px;
+  }
+}
+
+/* Top-of-Funnel media queries for specific devices */
+/* ipad/long tablet */
+
+@media (max-width: 768px) and (min-height: 990px) {
+  .top-of-funnel-hero {
+    height: 100vh;
+  }
+  .box-row {
+    width: 90%;
+  }
+  .home .info-row-mobile {
+    margin-top: -400px !important;
+  }
+}
+
+/* ipad pro */
+@media (max-width: 1050px) and (min-height: 1200px) {
+  .top-of-funnel-hero {
+    height: 80vh;
+  }
+  .box-row {
+    width: 90%;
+  }
+  .home .info-row-mobile {
+    margin-top: -400px !important;
   }
 }
 
@@ -4889,4 +5281,35 @@ p.border {
   .accelerate-section-desktop .white-box {
     margin-top: 150px;
   }
+}
+
+
+
+
+/* *************************** */
+/* bottom of funnel leads page */
+/* *************************** */
+
+.bottom-of-funnel-hero {
+  background-image: url('../images/bottom-of-funnel-page/bottom-hero-bg.png');
+}
+
+.page-id-304 .box-row .box {
+  min-height: 420px;
+  padding-top: 40px;
+}
+
+
+
+/* ***************************** */
+/* research lead generation page */
+/* ***************************** */
+
+.research-lead-gen-hero {
+  background-image: url('../images/research-lead-page/research-hero-bg.png');
+}
+
+.page-id-307 .box-row .box {
+  min-height: 450px;
+  padding-top: 40px;
 }
